// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TraverseModifyRoutes should get expected accessible result 1`] = `
Array [
  Object {
    "access": "canReadHomepage",
    "path": "/homepage",
    "routes": null,
    "unaccessible": false,
  },
  Object {
    "access": "canReadAdminPage",
    "path": "/admin",
    "routes": Array [
      Object {
        "access": "canReadAdminList",
        "path": "/adminList",
        "unaccessible": false,
      },
      Object {
        "access": "canReadAdminDetail",
        "path": "/adminDetail",
        "unaccessible": true,
      },
    ],
    "unaccessible": true,
  },
  Object {
    "access": "canReadUser",
    "path": "/user",
    "routes": Array [
      Object {
        "access": "canReadUserDetail",
        "path": "/userDetail",
        "unaccessible": false,
      },
    ],
    "unaccessible": false,
  },
  Object {
    "access": "canReadOrder",
    "path": "/order",
    "routes": Array [
      Object {
        "access": "canReadOrderAudit",
        "path": "/orderAudit",
        "unaccessible": true,
      },
      Object {
        "access": "canReadOrderCancellation",
        "path": "/orderCancellation",
        "unaccessible": true,
      },
    ],
    "unaccessible": true,
  },
  Object {
    "access": "canReadAbout",
    "path": "/about",
    "unaccessible": false,
  },
]
`;

exports[`TraverseModifyRoutes test no use code 1`] = `
Array [
  Object {
    "access": "canReadHomepage",
    "path": "/homepage",
    "routes": Object {},
    "unaccessible": false,
  },
  Object {
    "access": "canReadAdminPage",
    "path": "/admin",
    "unaccessible": true,
  },
  Object {
    "access": "canReadUser",
    "path": "/order",
    "routes": Array [
      Object {
        "access": "canReadOrderAudit",
        "path": "/orderAudit",
        "unaccessible": true,
      },
      Object {
        "access": "canReadOrderAudit",
        "path": "/orderCancellation",
        "unaccessible": true,
      },
    ],
    "unaccessible": true,
  },
]
`;
